# MPClient

./: Cargo.toml  README.md
src/: main.rs
src/components/: camera.rs  chat.rs  common.rs  entity.rs  hud.rs  lobby.rs  mod.rs  player.rs  weapon.rs
src/components/player/: animation.rs  input.rs  mod.rs  plugin.rs
src/network/: mod.rs  net_encoding.rs  net_manage.rs  net_message.rs  net_reconciliation.rs  net_system.rs  net_tasks.rs
src/test/: mod.rs  physics_test.rs
