[package]
name = "MPClient"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
bincode = { version = "2.0.1", features = ["serde"] }
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
futures-lite = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }